# CircuitFlow

./: .gitignore  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/codegen/: arduino.rs  espidf.rs  graph.rs  mod.rs  stm32.rs  types.rs
src/components/: StatusBar.tsx  TopNav.tsx
src/components/circuit/: CircuitToolbar.tsx  CommentNode.tsx  ComponentNode.tsx  ComponentSidebar.tsx  ContextMenu.tsx  PropertiesPanel.tsx  ShortcutsModal.tsx  ValidationPanel.tsx
src/components/logic/: LogicNode.tsx  LogicPalette.tsx
src/context/: DnDContext.tsx  LogicDnDContext.tsx
src/data/: componentLibrary.ts
src/lib/: componentService.ts  hardwareMap.ts  projectService.ts  supabase.ts  validateCircuit.ts
src/panels/: CircuitPanel.tsx  CodePanel.tsx  LogicPanel.tsx  SimulatePanel.tsx
src/screens/: AuthScreen.tsx  ProjectDashboard.tsx
src/store/: authStore.ts  circuitStore.ts  projectStore.ts
src/types/: circuit.ts  logic.ts
