[package]
name = "circuit-flow"
version = "0.0.1"
description = "CircuitFlow Desktop App"
authors = []
edition = "2021"

[[bin]]
name = "circuit-flow"
path = "src/main.rs"

[[bin]]
name = "kicad-ingest"
path = "src/bin/kicad_ingest.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
regex = "1"
dirs = "5"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
zip = "2"
bytes = "1"
